Move sub command name to implementing class